# benin-phes-viability-assessment

./: .gitignore  ARTICLE_COMPLET_FR.docx  ARTICLE_COMPLET_FR.md  Close_loop_Ben.rdf  LICENSE  README.md  delineate_watersheds_fabdem.py  process_era5_standard_evapotranspiration.py  pyproject.toml
docs/: CHANGELOG_HYDRO_V2.md  methodology.md
results/: .gitkeep  ahp_rankings.parquet  climate_series.csv  hydrology_deterministic_reference.csv  hydrology_sensitivity.parquet  hydrology_sensitivity_test.csv  hydrology_summary.csv  hydrology_summary.parquet  hydrology_summary_sobol.parquet  site_basins.geojson  site_masks.geojson  techno_economic_summary.parquet  test_climate_2002_era5.csv
src/phes_assessment/: __init__.py  ahp.py  basins.py  catalog.py  cli.py  climate.py  config.py  crs.py  fabdem.py  figures.py  hydrology.py  io.py  qa.py  sensitivity.py  sites.py
tests/: test_climate.py  test_hydrology.py
