[project]
name = "phes-assessment"
version = "0.1.0"
description = "Outils de traitement et d'analyse pour l'étude de faisabilité PHES au Bénin"
authors = [{name = "99ch"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3",
    "xarray>=2024.1",
    "numpy>=1.24",
    "pandas>=2.2",
    "pyproj>=3.6",
    "shapely>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "click>=8.1",
    "pyarrow>=16.0",
    "SALib>=1.4",
    "cdsapi>=0.6",
]

[project.optional-dependencies]
full = [
    "geopandas>=0.14",
    "richdem>=0.3",
    "netCDF4>=1.6",
    "whitebox>=2.2",
]
dev = [
    "pytest>=8.2",
]

[project.scripts]
phes-data = "phes_assessment.cli:data_catalog"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
