[project]
name = "phes-assessment"
version = "0.1.0"
description = "Outils de traitement et d'analyse pour l'étude de faisabilité PHES au Bénin"
authors = [{name = "99ch"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["PHES", "pumped-hydro", "energy-storage", "hydrology", "Benin", "renewable-energy", "Monte-Carlo", "AHP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "rasterio>=1.3",
    "xarray>=2024.1",
    "numpy>=1.24",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyproj>=3.6",
    "shapely>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "click>=8.1",
    "pyarrow>=16.0",
    "SALib>=1.4",
    "cdsapi>=0.6",
]

[project.optional-dependencies]
full = [
    "geopandas>=0.14",
    "richdem>=0.3",
    "netCDF4>=1.6",
    "whitebox>=2.2",
]
dev = [
    "pytest>=8.2",
]

[project.urls]
Homepage = "https://github.com/99ch/benin-phes-viability-assessment"
Repository = "https://github.com/99ch/benin-phes-viability-assessment"
Issues = "https://github.com/99ch/benin-phes-viability-assessment/issues"
Documentation = "https://github.com/99ch/benin-phes-viability-assessment/blob/phes/README.md"

[project.scripts]
phes-data = "phes_assessment.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
